# gluon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: .gitignore  settings.json
.claude/skills/: using-gluon.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
crates/gluon-cli/: Cargo.toml
crates/gluon-cli/src/: cli.rs  main.rs
crates/gluon-cli/src/cmd/: build.rs  check.rs  clean.rs  clippy.rs  configure.rs  external.rs  fmt.rs  internal.rs  mod.rs  run.rs  vendor.rs
crates/gluon-cli/tests/: integration.rs  run_integration.rs
crates/gluon-core/: Cargo.toml
crates/gluon-core/src/: analyzer.rs  error.rs  fmt.rs  lib.rs  project_root.rs
crates/gluon-core/src/cache/: depinfo.rs  hash.rs  lock.rs  manifest.rs  mod.rs
crates/gluon-core/src/compile/: command_builder.rs  compile_and_cache.rs  compile_crate.rs  compile_utils.rs  driver.rs  extern_map.rs  layout.rs  mod.rs  rustc.rs  rustc_info.rs
crates/gluon-core/src/config/: interpolate.rs  mod.rs  overrides.rs  resolve.rs
crates/gluon-core/src/engine/: conversions.rs  intern.rs  mod.rs  schema.rs  validate.rs
crates/gluon-core/src/engine/builders/: config.rs  kconfig.rs  mod.rs  model.rs  pipeline.rs
crates/gluon-core/src/kconfig/: ast.rs  lexer.rs  loader.rs  lower.rs  mod.rs  parser.rs
crates/gluon-core/src/rule/: builtin.rs  mod.rs  script.rs
crates/gluon-core/src/run/: entry.rs  mod.rs  ovmf.rs  qemu_cmd.rs  resolve.rs
crates/gluon-core/src/scheduler/: dag.rs  mod.rs  worker.rs
crates/gluon-core/src/scheduler/helpers/: config_crate.rs  esp.rs  mod.rs  sysroot.rs
crates/gluon-core/src/sysroot/: mod.rs
crates/gluon-core/tests/: kconfig_e2e.rs  vendor_e2e.rs
crates/gluon-lsp/: Cargo.toml  README.md
crates/gluon-lsp/src/: analysis.rs  completion.rs  diagnostics.rs  hover.rs  index.rs  lib.rs  main.rs  semantic_tokens.rs  word.rs
crates/gluon-lsp/src/parser/: mod.rs  rhai.rs
crates/gluon-lsp/tests/: integration.rs
crates/gluon-model/: Cargo.toml
crates/gluon-model/src/: build_model.rs  handle.rs  kconfig.rs  lib.rs  resolved.rs  source.rs
crates/tree-sitter-rhai/: Cargo.toml  build.rs
crates/tree-sitter-rhai/grammar/: parser.c
crates/tree-sitter-rhai/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  faq.md  introduction.md
docs/src/build-system/: build-cache.md  how-it-works.md  pipelines-and-rules.md  sysroots.md
docs/src/cli/: commands.md
docs/src/configuration/: config-options.md  dependencies.md  gluon-rhai.md  groups-and-crates.md  overrides.md  projects-targets-profiles.md
docs/src/cookbook/: config-options.md  minimal-kernel.md  uefi-bootloader.md
docs/src/getting-started/: building-and-running.md  first-project.md  installation.md
docs/src/running/: debugging.md  qemu.md  uefi-boot.md
docs/src/tooling/: editor-setup.md  rust-analyzer.md
editor/tree-sitter-gluon/: README.md
editor/tree-sitter-gluon/queries/: highlights.scm
examples/: basic-kernel.rhai  uefi-with-bootloader.rhai  with-config.rhai
scripts/: regen-dsl-queries.sh
tests/fixtures/kconfig-minimal/: extras.kconfig  gluon.rhai  options.kconfig
tests/fixtures/kconfig-rhai-equiv/: gluon.rhai
tests/fixtures/minimal/: .gitignore  gluon.rhai
tests/fixtures/minimal-uefi/: gluon.rhai
tests/fixtures/minimal-uefi/crates/kernel/src/: main.rs
tests/fixtures/minimal-uefi/crates/proc_macro/src/: lib.rs
tests/fixtures/minimal-uefi/esp/EFI/BOOT/: .gitkeep
tests/fixtures/minimal/crates/kernel/: kernel.ld
tests/fixtures/minimal/crates/kernel/src/: main.rs
tests/fixtures/minimal/crates/proc_macro/: Cargo.toml.disabled
tests/fixtures/multi-profile/: gluon.rhai
tests/fixtures/uefi-bootloader-kernel/: gluon.rhai
tests/fixtures/uefi-bootloader-kernel/crates/bootloader/src/: main.rs
tests/fixtures/uefi-bootloader-kernel/crates/kernel/: kernel.ld
tests/fixtures/uefi-bootloader-kernel/crates/kernel/src/: main.rs
tests/fixtures/vendor-minimal/: .gitignore  README.md  gluon.path-only.rhai  gluon.rhai
tests/fixtures/vendor-minimal-helper/: Cargo.toml
tests/fixtures/vendor-minimal-helper/src/: lib.rs
