[workspace]
resolver = "3"
members = ["crates/gluon-model", "crates/gluon-core", "crates/gluon-cli"]
default-members = ["crates/gluon-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/hxyulin/gluon"
rust-version = "1.85"
keywords = ["build-system", "bare-metal", "kernel", "rustc", "no-std"]
categories = ["development-tools::build-utils", "embedded", "no-std"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
gluon-model = { path = "crates/gluon-model" }
gluon-core = { path = "crates/gluon-core" }
