[package]
name = "gluon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for the Gluon build system: build model, scheduler, compile/cache/vendor primitives."

[dependencies]
gluon-model.workspace = true
rhai = "1.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
