[package]
name = "gluon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for the Gluon build system: build model, scheduler, compile/cache/vendor primitives."

[dependencies]
gluon-model.workspace = true
fs2 = "0.4"
rhai = "1.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
walkdir = "2"

[features]
# Enables tests that touch the network (e.g. `cargo vendor` pulling from
# crates.io). Off by default so `cargo test` works offline; CI turns this
# on in a dedicated job. See `tests/vendor_e2e.rs`.
network-tests = []

[dev-dependencies]
tempfile = "3"
