[package]
name = "gluon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for the Gluon build system: build model, scheduler, compile/cache/vendor primitives."
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gluon-model.workspace = true
fs2 = "0.4"
# `metadata` is enabled so `engine::dsl_signatures()` can enumerate the
# registered DSL surface for editor tooling (LSP + tree-sitter query
# regeneration). The feature adds per-function signature strings to the
# registry; the cost is a few KB of binary + a `Vec<String>` at call
# time. Worth it: without this we'd have to hand-maintain the function
# list in two separate places and it would drift.
rhai = { version = "1.24", features = ["metadata"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
walkdir = "2"

# Signal handling for `gluon run`: catches SIGINT/SIGTERM so the
# spawned QEMU child can be killed cleanly instead of wedging. Used
# only by the runner (`run::entry`); the rest of gluon-core does not
# touch signals. Scoped to Unix because the runner's signal trapping
# is a no-op on Windows (console Ctrl+C handling is a different
# mechanism and the runner is Unix-centric today).
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[features]
# Enables tests that touch the network (e.g. `cargo vendor` pulling from
# crates.io). Off by default so `cargo test` works offline; CI turns this
# on in a dedicated job. See `tests/vendor_e2e.rs`.
network-tests = []

[dev-dependencies]
tempfile = "3"
# Scoped, safe wrapper for env var mutation in tests. Uses a global
# mutex internally so the unsafe `std::env::set_var` (Rust 1.80+) is
# isolated to one place. Keeps our test code free of `unsafe` blocks
# that would otherwise need per-call SAFETY justifications.
temp-env = "0.3"
